LP-42 shared sequence generator, table name removal, address repository and builder usage